--- a/app/src/css/foundry.less
+++ b/app/src/css/foundry.less
@@ -349,6 +349,10 @@ span.subnav-back-chevron {
 	margin-bottom: 16px;
 }
 
+.bubble-group:last-of-type { /*bottom of page gets cut off for some reason*/
+	margin-bottom: 200px;
+}
+
 .bubble-group-label {
 	color: rgba(255, 255, 255, 1.0);
 	font-weight: 500;
